// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ServiceActionToolbar should match manage deployment snapshot 1`] = `
<body
  data-scroll-locked="1"
  style="pointer-events: none;"
>
  <span
    aria-hidden="true"
    data-aria-hidden="true"
    data-radix-focus-guard=""
    style="outline: none; opacity: 0; position: fixed; pointer-events: none;"
    tabindex="0"
  />
  <div
    aria-hidden="true"
    aria-orientation="horizontal"
    data-aria-hidden="true"
    data-orientation="horizontal"
    dir="ltr"
    role="toolbar"
    style="outline: none;"
    tabindex="0"
  >
    <button
      aria-controls="radix-:r7:"
      aria-expanded="true"
      aria-haspopup="menu"
      aria-label="Manage Deployment"
      class="inline-flex items-center shrink-0 font-medium transition-[background-color,transform] disabled:scale-100 disabled:pointer-events-none disabled:border disabled:border-neutral disabled:text-neutral-disabled disabled:bg-surface-neutral-component focus-visible:[&:not(:active)]:outline-2 select-none outline-warning-strong h-8 px-2.5 hover:bg-surface-warning-subtle active:scale-100 first:rounded-l last:rounded-r first:border-x border border-warning-component hover:border-warning-strong data-[state=open]:bg-surface-warning-subtle data-[state=open]:border-warning-strong text-warning text-sm outline-0 min-w-[36px]"
      data-orientation="horizontal"
      data-radix-collection-item=""
      data-state="open"
      id="radix-:r6:"
      tabindex="-1"
      type="button"
    >
      <div
        class="flex h-full w-full items-center justify-center"
        data-state="closed"
      >
        <i
          aria-hidden="true"
          class="fa-regular fa-play mr-4"
        />
        <i
          aria-hidden="true"
          class="fa-regular fa-chevron-down "
        />
      </div>
    </button>
    <a
      class="cursor-pointer duration-100 gap-1 hover:text-info-hover inline-flex items-center shrink-0 font-medium transition-[background-color,transform] disabled:scale-100 disabled:pointer-events-none disabled:border disabled:border-neutral disabled:text-neutral-disabled disabled:bg-surface-neutral-component focus-visible:[&:not(:active)]:outline-2 select-none outline-neutral-strong h-8 px-2.5 bg-surface-neutral border border-neutral hover:bg-surface-neutral-subtle active:scale-100 first:rounded-l last:rounded-r first:border-x border-l-0 hover:border-neutral-strong active:bg-surface-neutral-subtle data-[state=open]:bg-surface-neutral-subtle data-[state=open]:border-neutral-strong text-neutral-subtle text-sm outline-0 min-w-[36px]"
      data-orientation="horizontal"
      data-radix-collection-item=""
      data-state="closed"
      tabindex="-1"
      to="/organization/123/project/123/environment/3840068565336064/logs/0/service-logs"
      type="button"
    >
      <i
        aria-hidden="true"
        class="fa-regular fa-scroll "
      />
    </a>
    <button
      aria-expanded="false"
      aria-haspopup="menu"
      aria-label="Other actions"
      class="inline-flex items-center shrink-0 font-medium transition-[background-color,transform] disabled:scale-100 disabled:pointer-events-none disabled:border disabled:border-neutral disabled:text-neutral-disabled disabled:bg-surface-neutral-component focus-visible:[&:not(:active)]:outline-2 select-none outline-neutral-strong h-8 px-2.5 bg-surface-neutral border border-neutral hover:bg-surface-neutral-subtle active:scale-100 first:rounded-l last:rounded-r first:border-x border-l-0 hover:border-neutral-strong active:bg-surface-neutral-subtle data-[state=open]:bg-surface-neutral-subtle data-[state=open]:border-neutral-strong text-neutral-subtle text-sm outline-0 min-w-[36px]"
      data-orientation="horizontal"
      data-radix-collection-item=""
      data-state="closed"
      id="radix-:rc:"
      tabindex="-1"
      type="button"
    >
      <div
        class="flex h-full w-full items-center justify-center"
        data-state="closed"
      >
        <i
          aria-hidden="true"
          class="fa-regular fa-ellipsis-v "
        />
      </div>
    </button>
  </div>
  <div
    data-radix-popper-content-wrapper=""
    dir="ltr"
    style="position: fixed; left: 0px; top: 0px; transform: translate(0px, 8px); min-width: max-content; --radix-popper-available-width: 0px; --radix-popper-available-height: -8px; --radix-popper-anchor-width: 0px; --radix-popper-anchor-height: 0px; --radix-popper-transform-origin: 0% 0px;"
  >
    <div
      aria-labelledby="radix-:r6:"
      aria-orientation="vertical"
      class="flex w-[258px] flex-col gap-1 rounded-md border border-neutral bg-surface-neutral p-2 shadow-[0_0_32px_rgba(0,0,0,0.08)] data-[state=open]:data-[side=bottom]:animate-slidein-down-md-faded data-[state=open]:data-[side=left]:animate-slidein-right-sm-faded data-[state=open]:data-[side=right]:animate-slidein-left-md-faded data-[state=open]:data-[side=top]:animate-slidein-up-md-faded"
      data-align="start"
      data-orientation="vertical"
      data-radix-menu-content=""
      data-side="bottom"
      data-state="open"
      dir="ltr"
      id="radix-:r7:"
      role="menu"
      style="outline: none; --radix-dropdown-menu-content-transform-origin: var(--radix-popper-transform-origin); --radix-dropdown-menu-content-available-width: var(--radix-popper-available-width); --radix-dropdown-menu-content-available-height: var(--radix-popper-available-height); --radix-dropdown-menu-trigger-width: var(--radix-popper-anchor-width); --radix-dropdown-menu-trigger-height: var(--radix-popper-anchor-height); pointer-events: auto;"
      tabindex="-1"
    >
      <div
        class="px-3 flex items-center h-8 text-sm font-medium outline-none select-none rounded data-[highlighted]:bg-surface-warning-component data-[highlighted]:text-warning hover:text-warning cursor-pointer hover:bg-surface-warning-component text-warning relative"
        data-orientation="vertical"
        data-radix-collection-item=""
        role="menuitem"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="fa-regular fa-play text-sm mr-2 text-warning"
        />
        Deploy
        <div
          class="absolute right-2"
          data-state="closed"
        >
          <i
            aria-hidden="true"
            class="fa-regular fa-circle-exclamation "
          />
        </div>
      </div>
      <div
        aria-orientation="horizontal"
        class="my-1 h-[1px] w-full bg-surface-neutral-component"
        role="separator"
      />
      <div
        class="px-3 flex items-center h-8 text-sm font-medium outline-none select-none rounded data-[highlighted]:bg-surface-brand-component data-[highlighted]:text-brand hover:bg-surface-brand-component hover:text-brand cursor-pointer text-neutral"
        data-orientation="vertical"
        data-radix-collection-item=""
        role="menuitem"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="fa-regular fa-clock-rotate-left text-sm mr-2 text-brand-9"
        />
        Deploy another chart version
      </div>
    </div>
  </div>
  <span
    aria-hidden="true"
    data-aria-hidden="true"
    data-radix-focus-guard=""
    style="outline: none; opacity: 0; position: fixed; pointer-events: none;"
    tabindex="0"
  />
</body>
`;

exports[`ServiceActionToolbar should match other actions snapshot 1`] = `
<body
  style=""
>
  <div
    aria-orientation="horizontal"
    data-orientation="horizontal"
    dir="ltr"
    role="toolbar"
    style="outline: none;"
    tabindex="0"
  >
    <button
      aria-expanded="false"
      aria-haspopup="menu"
      aria-label="Manage Deployment"
      class="inline-flex items-center shrink-0 font-medium transition-[background-color,transform] disabled:scale-100 disabled:pointer-events-none disabled:border disabled:border-neutral disabled:text-neutral-disabled disabled:bg-surface-neutral-component focus-visible:[&:not(:active)]:outline-2 select-none outline-warning-strong h-8 px-2.5 hover:bg-surface-warning-subtle active:scale-100 first:rounded-l last:rounded-r first:border-x border border-warning-component hover:border-warning-strong data-[state=open]:bg-surface-warning-subtle data-[state=open]:border-warning-strong text-warning text-sm outline-0 min-w-[36px]"
      data-orientation="horizontal"
      data-radix-collection-item=""
      data-state="closed"
      id="radix-:rp:"
      tabindex="-1"
      type="button"
    >
      <div
        class="flex h-full w-full items-center justify-center"
        data-state="closed"
      >
        <i
          aria-hidden="true"
          class="fa-regular fa-play mr-4"
        />
        <i
          aria-hidden="true"
          class="fa-regular fa-chevron-down "
        />
      </div>
    </button>
    <a
      class="cursor-pointer duration-100 gap-1 hover:text-info-hover inline-flex items-center shrink-0 font-medium transition-[background-color,transform] disabled:scale-100 disabled:pointer-events-none disabled:border disabled:border-neutral disabled:text-neutral-disabled disabled:bg-surface-neutral-component focus-visible:[&:not(:active)]:outline-2 select-none outline-neutral-strong h-8 px-2.5 bg-surface-neutral border border-neutral hover:bg-surface-neutral-subtle active:scale-100 first:rounded-l last:rounded-r first:border-x border-l-0 hover:border-neutral-strong active:bg-surface-neutral-subtle data-[state=open]:bg-surface-neutral-subtle data-[state=open]:border-neutral-strong text-neutral-subtle text-sm outline-0 min-w-[36px]"
      data-orientation="horizontal"
      data-radix-collection-item=""
      data-state="closed"
      tabindex="-1"
      to="/organization/123/project/123/environment/3840068565336064/logs/0/service-logs"
      type="button"
    >
      <i
        aria-hidden="true"
        class="fa-regular fa-scroll "
      />
    </a>
    <button
      aria-expanded="false"
      aria-haspopup="menu"
      aria-label="Other actions"
      class="inline-flex items-center shrink-0 font-medium transition-[background-color,transform] disabled:scale-100 disabled:pointer-events-none disabled:border disabled:border-neutral disabled:text-neutral-disabled disabled:bg-surface-neutral-component focus-visible:[&:not(:active)]:outline-2 select-none outline-neutral-strong h-8 px-2.5 bg-surface-neutral border border-neutral hover:bg-surface-neutral-subtle active:scale-100 first:rounded-l last:rounded-r first:border-x border-l-0 hover:border-neutral-strong active:bg-surface-neutral-subtle data-[state=open]:bg-surface-neutral-subtle data-[state=open]:border-neutral-strong text-neutral-subtle text-sm outline-0 min-w-[36px]"
      data-orientation="horizontal"
      data-radix-collection-item=""
      data-state="closed"
      id="radix-:rv:"
      tabindex="-1"
      type="button"
    >
      <div
        class="flex h-full w-full items-center justify-center"
        data-state="closed"
      >
        <i
          aria-hidden="true"
          class="fa-regular fa-ellipsis-v "
        />
      </div>
    </button>
  </div>
</body>
`;

exports[`ServiceActionToolbar should match other actions snapshot 2`] = `
<body
  data-scroll-locked="1"
  style="pointer-events: none;"
>
  <span
    aria-hidden="true"
    data-aria-hidden="true"
    data-radix-focus-guard=""
    style="outline: none; opacity: 0; position: fixed; pointer-events: none;"
    tabindex="0"
  />
  <div
    aria-hidden="true"
    aria-orientation="horizontal"
    data-aria-hidden="true"
    data-orientation="horizontal"
    dir="ltr"
    role="toolbar"
    style="outline: none;"
    tabindex="0"
  >
    <button
      aria-expanded="false"
      aria-haspopup="menu"
      aria-label="Manage Deployment"
      class="inline-flex items-center shrink-0 font-medium transition-[background-color,transform] disabled:scale-100 disabled:pointer-events-none disabled:border disabled:border-neutral disabled:text-neutral-disabled disabled:bg-surface-neutral-component focus-visible:[&:not(:active)]:outline-2 select-none outline-warning-strong h-8 px-2.5 hover:bg-surface-warning-subtle active:scale-100 first:rounded-l last:rounded-r first:border-x border border-warning-component hover:border-warning-strong data-[state=open]:bg-surface-warning-subtle data-[state=open]:border-warning-strong text-warning text-sm outline-0 min-w-[36px]"
      data-orientation="horizontal"
      data-radix-collection-item=""
      data-state="closed"
      id="radix-:rp:"
      tabindex="-1"
      type="button"
    >
      <div
        class="flex h-full w-full items-center justify-center"
        data-state="closed"
      >
        <i
          aria-hidden="true"
          class="fa-regular fa-play mr-4"
        />
        <i
          aria-hidden="true"
          class="fa-regular fa-chevron-down "
        />
      </div>
    </button>
    <a
      class="cursor-pointer duration-100 gap-1 hover:text-info-hover inline-flex items-center shrink-0 font-medium transition-[background-color,transform] disabled:scale-100 disabled:pointer-events-none disabled:border disabled:border-neutral disabled:text-neutral-disabled disabled:bg-surface-neutral-component focus-visible:[&:not(:active)]:outline-2 select-none outline-neutral-strong h-8 px-2.5 bg-surface-neutral border border-neutral hover:bg-surface-neutral-subtle active:scale-100 first:rounded-l last:rounded-r first:border-x border-l-0 hover:border-neutral-strong active:bg-surface-neutral-subtle data-[state=open]:bg-surface-neutral-subtle data-[state=open]:border-neutral-strong text-neutral-subtle text-sm outline-0 min-w-[36px]"
      data-orientation="horizontal"
      data-radix-collection-item=""
      data-state="closed"
      tabindex="-1"
      to="/organization/123/project/123/environment/3840068565336064/logs/0/service-logs"
      type="button"
    >
      <i
        aria-hidden="true"
        class="fa-regular fa-scroll "
      />
    </a>
    <button
      aria-controls="radix-:r10:"
      aria-expanded="true"
      aria-haspopup="menu"
      aria-label="Other actions"
      class="inline-flex items-center shrink-0 font-medium transition-[background-color,transform] disabled:scale-100 disabled:pointer-events-none disabled:border disabled:border-neutral disabled:text-neutral-disabled disabled:bg-surface-neutral-component focus-visible:[&:not(:active)]:outline-2 select-none outline-neutral-strong h-8 px-2.5 bg-surface-neutral border border-neutral hover:bg-surface-neutral-subtle active:scale-100 first:rounded-l last:rounded-r first:border-x border-l-0 hover:border-neutral-strong active:bg-surface-neutral-subtle data-[state=open]:bg-surface-neutral-subtle data-[state=open]:border-neutral-strong text-neutral-subtle text-sm outline-0 min-w-[36px]"
      data-orientation="horizontal"
      data-radix-collection-item=""
      data-state="open"
      id="radix-:rv:"
      tabindex="-1"
      type="button"
    >
      <div
        class="flex h-full w-full items-center justify-center"
        data-state="closed"
      >
        <i
          aria-hidden="true"
          class="fa-regular fa-ellipsis-v "
        />
      </div>
    </button>
  </div>
  <div
    data-radix-popper-content-wrapper=""
    dir="ltr"
    style="position: fixed; left: 0px; top: 0px; transform: translate(0px, 8px); min-width: max-content; --radix-popper-available-width: 0px; --radix-popper-available-height: -8px; --radix-popper-anchor-width: 0px; --radix-popper-anchor-height: 0px; --radix-popper-transform-origin: 0% 0px;"
  >
    <div
      aria-labelledby="radix-:rv:"
      aria-orientation="vertical"
      class="flex w-[258px] flex-col gap-1 rounded-md border border-neutral bg-surface-neutral p-2 shadow-[0_0_32px_rgba(0,0,0,0.08)] data-[state=open]:data-[side=bottom]:animate-slidein-down-md-faded data-[state=open]:data-[side=left]:animate-slidein-right-sm-faded data-[state=open]:data-[side=right]:animate-slidein-left-md-faded data-[state=open]:data-[side=top]:animate-slidein-up-md-faded"
      data-align="start"
      data-orientation="vertical"
      data-radix-menu-content=""
      data-side="bottom"
      data-state="open"
      dir="ltr"
      id="radix-:r10:"
      role="menu"
      style="outline: none; --radix-dropdown-menu-content-transform-origin: var(--radix-popper-transform-origin); --radix-dropdown-menu-content-available-width: var(--radix-popper-available-width); --radix-dropdown-menu-content-available-height: var(--radix-popper-available-height); --radix-dropdown-menu-trigger-width: var(--radix-popper-anchor-width); --radix-dropdown-menu-trigger-height: var(--radix-popper-anchor-height); pointer-events: auto;"
      tabindex="-1"
    >
      <a
        href="https://gitpod.io/#/tree/"
        rel="noreferrer"
        target="_blank"
      >
        <div
          class="px-3 flex items-center h-8 text-sm font-medium outline-none select-none rounded data-[highlighted]:bg-surface-brand-component data-[highlighted]:text-brand hover:bg-surface-brand-component hover:text-brand cursor-pointer text-neutral"
          data-orientation="vertical"
          data-radix-collection-item=""
          role="menuitem"
          tabindex="-1"
        >
          <i
            aria-hidden="true"
            class="fa-regular fa-code text-sm mr-2 text-brand-9"
          />
          Edit code
        </div>
      </a>
      <a
        class="transition duration-100 px-3 flex items-center h-8 text-sm font-medium outline-none select-none rounded data-[highlighted]:bg-surface-brand-component data-[highlighted]:text-brand hover:bg-surface-brand-component hover:text-brand cursor-pointer text-neutral gap-0"
        data-orientation="vertical"
        data-radix-collection-item=""
        role="menuitem"
        tabindex="-1"
        to="/organization/123/audit-logs/general?targetId=0&targetType=HELM&projectId=123&environmentId=3840068565336064"
      >
        <i
          aria-hidden="true"
          class="fa-regular fa-clock-rotate-left text-sm mr-2 text-brand-9"
        />
        See audit logs
      </a>
      <div
        class="px-3 flex items-center h-8 text-sm font-medium outline-none select-none rounded data-[highlighted]:bg-surface-brand-component data-[highlighted]:text-brand hover:bg-surface-brand-component hover:text-brand cursor-pointer text-neutral"
        data-orientation="vertical"
        data-radix-collection-item=""
        role="menuitem"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="fa-regular fa-copy text-sm mr-2 text-brand-9"
        />
        Copy identifiers
      </div>
      <a
        class="transition duration-100 px-3 flex items-center h-8 text-sm font-medium outline-none select-none rounded data-[highlighted]:bg-surface-brand-component data-[highlighted]:text-brand hover:bg-surface-brand-component hover:text-brand cursor-pointer text-neutral gap-0"
        data-orientation="vertical"
        data-radix-collection-item=""
        role="menuitem"
        tabindex="-1"
        to="/organization/123/project/123/environment/3840068565336064/application/0/settings/general"
      >
        <i
          aria-hidden="true"
          class="fa-regular fa-gear text-sm mr-2 text-brand-9"
        />
        Open settings
      </a>
      <div
        class="px-3 flex items-center h-8 text-sm font-medium outline-none select-none rounded data-[highlighted]:bg-surface-brand-component data-[highlighted]:text-brand hover:bg-surface-brand-component hover:text-brand cursor-pointer text-neutral"
        data-orientation="vertical"
        data-radix-collection-item=""
        role="menuitem"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="fa-regular fa-copy text-sm mr-2 text-brand-9"
        />
        Clone
      </div>
      <div
        aria-orientation="horizontal"
        class="my-1 h-[1px] w-full bg-surface-neutral-component"
        role="separator"
      />
      <div
        class="px-3 flex items-center h-8 text-sm font-medium outline-none select-none rounded data-[highlighted]:bg-surface-negative-component data-[highlighted]:text-negative hover:text-negative cursor-pointer hover:bg-surface-negative-component text-negative"
        data-orientation="vertical"
        data-radix-collection-item=""
        role="menuitem"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="fa-regular fa-trash text-sm mr-2 text-negative"
        />
        Remove service
      </div>
    </div>
  </div>
  <span
    aria-hidden="true"
    data-aria-hidden="true"
    data-radix-focus-guard=""
    style="outline: none; opacity: 0; position: fixed; pointer-events: none;"
    tabindex="0"
  />
</body>
`;
